# coax

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh
include/: coax.h
include/coax/: alloc.h  array.h  buffer.h  coax.h  crc32.h  dict.h  filefuncs.h  funcs.h  list.h  log.h  macros.h  md5.h  pair.h  platform.h  ptrarray.h  queue.h  ringbuf.h  stack.h  str.h  strfuncs.h
lib/: alloc.c  array.c  buffer.c  crc32.c  dict.c  filefuncs.c  list.c  log.c  md5.c  pair.c  ptrarray.c  queue.c  ringbuf.c  str.c  strfuncs.c
scripts/: gen.py
src/: main.c
